...
    <string name="message_condition_new">全新</string>
    <string name="message_condition_used">中古</string>
    <string name="message_condition_unopened">未拆</string>
    <string name="message_condition_incomplete">缺件</string>
    <string name="message_condition_custom">自定义</string>
    <string name="message_allocation_equal">平均分摊</string>
    <string name="message_allocation_by_price">按价格比例</string>
    <string name="message_allocation_manual">手动指定</string>
    <string name="message_category_shipping">运费</string>
    <string name="message_category_fee">手续费</string>
    <string name="message_category_tax">税费</string>
    <string name="message_category_other">其他</string>
    <string name="message_sort_added_desc">最近添加</string>
    <string name="message_sort_added_asc">最早添加</string>
...
